<resources>
    <string name="app_name">AlarmAnlageApp</string>
    <string name="communicationtype">communicationtype</string>
    <string name="communicationaddinfo">communicationaddinfo</string>
    <string name="settings">Einstellungen</string>
    <string name="selectcommunicationtypetext">Hier können Sie einstellen, wie Sie Benachrichtigungen erhalten wollen.</string>
    <string name="submitSettings">Einstellungen speichern</string>
    <string name="sms">SMS</string>
    <string name="hintsms">Telefonnummer</string>
    <string name="email">E-Mail</string>
    <string name="hintemail">E-Mail Adresse</string>
    <string name="default_bt_addr">my default bt_addr</string>
    <string name="send_message_to_device_button">Send Message To</string>
    <string name="bt_addr_hint">Bluetooth Adress</string>
    <string name="connected_devices_default">No connected devices</string>
    <string name="received_message_default">No message received</string>
</resources>
